chore(Libfox) Update libfox to latest commit

--- a/lib/libfox/Makefile
+++ b/lib/libfox/Makefile
@@ -26,6 +26,11 @@ $(MODULES):
 	@$(MAKE) $@ $(RULE)
 	@echo
 
+.PHONY: test-%
+test-%:
+	@$(MAKE) $(subst test-,,$@) tests
+	@echo
+
 .PHONY: compiledb
 compiledb: RULE := compiledb
 compiledb: $(MODULES)
